@@ -1,48 +1,13 @@
 {
-  "timestamp" : "2022-07-30T02:21:42Z",
-  "count_outdated" : 270,
-  "uniques_outdated" : 132,
+  "timestamp" : "2022-08-07T16:19:35Z",
+  "count_outdated" : 283,
+  "uniques_outdated" : 141,
   "count" : 298,
-  "uniques" : 148,
+  "uniques" : 150,
   "clones" : [
     {
-      "timestamp": "2022-07-16T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ]
-    },
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2022-07-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-07-24T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -81,6 +46,20 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
