@@ -1,35 +1,10 @@
 {
-  "count": 28,
-  "uniques": 6,
+  "count": 15,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-07-16T00:00:00Z",
-      "count": 4,
-      "uniques": 4
-    },
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 4,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2022-07-21T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-24T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -56,6 +31,16 @@
       "timestamp": "2022-07-29T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
